<resources>
    <string name="app_name">MySQLiteExample</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="xyz_abc_com">xyz@abc.com</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_id">email_id</string>
    <string name="confirm_password">confirm password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_out">Log Out</string>

</resources>
