<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ashish.mysqliteexample.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etSignEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/xyz_abc_com"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etSignPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="25dp"
        android:onClick="callSignIn"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="55dp"
        android:gravity="center_horizontal"
        android:text="@string/don_t_have_an_account" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="3dp"
        android:onClick="callSignUp"
        android:text="@string/sign_up" />

</LinearLayout>
